==> SpiralCrab/MPU9250_STM32F411CE/Examples/MPU9250_single_blocking/Core/Src/MPU9250.c <==
#include "MPU9250.h"
#include "i2c.h"
#define delay(x) (HAL_Delay(x))

  void writeByte(uint8_t address, uint8_t subAddress, uint8_t data)
{
    HAL_I2C_Mem_Write(&hi2c1, address, subAddress, I2C_MEMADD_SIZE_8BIT, &data, 1, 100);
}

  uint8_t readByte(uint8_t address, uint8_t subAddress)
{
  uint8_t data = 0;                        // `data` will store the register data
  HAL_I2C_Mem_Read(&hi2c1, address, subAddress, I2C_MEMADD_SIZE_8BIT, &data, 1, 100);
  return data;                             // Return data read from slave register
}

  void readBytes(uint8_t address, uint8_t subAddress, uint8_t count, uint8_t * dest)
{
    HAL_I2C_Mem_Read(&hi2c1, address, subAddress, I2C_MEMADD_SIZE_8BIT, dest, count, 100);
}
